testsuite/tests/rename/should_fail/T18240a.stderr

T18240a.hs:11:11: error:
    Instance head cannot contain nested ‘forall’s or contexts
    In an instance declaration

T18240a.hs:12:15: error: Not in scope: type variable ‘a’

T18240a.hs:14:11: error:
    Instance head cannot contain nested ‘forall’s or contexts
    In an instance declaration

T18240a.hs:17:11: error:
    Instance head cannot contain nested ‘forall’s or contexts
    In an instance declaration

T18240a.hs:18:22: error: Not in scope: type variable ‘a’

T18240a.hs:20:21: error:
    Instance head cannot contain nested ‘forall’s or contexts
    In an instance declaration

T18240a.hs:21:24: error: Not in scope: type variable ‘b’

T18240a.hs:23:19: error:
    Instance head cannot contain nested ‘forall’s or contexts
    In an instance declaration

T18240a.hs:28:10: error:
    Illegal head of an instance declaration: ‘42’
      Instance heads must be of the form
        C ty_1 ... ty_n
      where ‘C’ is a class
    In an instance declaration

T18240a.hs:29:10: error:
    Illegal head of an instance declaration: ‘Int -> Int’
      Instance heads must be of the form
        C ty_1 ... ty_n
      where ‘C’ is a class
    In an instance declaration
